--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,9 @@
     display: flex;
     justify-content: end;
 }
+.responsive-menu-icon{
+    display: none;
+}
 .header-nav ul li {
     display: inline;
     list-style: none;
@@ -40,6 +43,24 @@
     color: #E02C6D;
     transition: 0.4s;
 }
+.responsive-cart-icon{
+    display: none;
+}
+.hero-info{
+    display: flex;
+    align-items: center;
+}
+.hero-info-details h1{
+    font-size: 52px;
+    font-weight: 700;
+    color: #3A3A3A;
+}
+.hero-info-details p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #3A3A3A;
+    margin: 30px 30px 0 0;
+}
 .hero-button {
     margin-top: 30px;
 }
@@ -51,6 +72,145 @@
     border-radius: 50px;
     font-weight: 600;
 }
+.hero-button a:hover{
+    box-shadow: 5px 5px 10px 1px rgba(224, 46, 111, 0.25);
+    transition: 0.4s;
+}
 .hero-button a i{
     margin-left: 10px;
+}
+.hero-image img{
+    float: right;
+}
+.hr{
+    border-color: rgba(0, 0, 0, 0.3);
+}
+.third-section{
+    padding: 60px 0;
+    color: #3A3A3A;
+}
+.third-section-heading h1{
+    font-size: 28px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.product-container{
+    width: 1020px;
+    margin: auto;
+}
+.col-3{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 0px;
+    
+}
+.product{
+    box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin-top: 30px;
+    padding: 15px;
+}
+.product:hover{
+    box-shadow: 5px 5px 10px 1px rgba(224, 46, 111, 0.25);
+}
+.product-img{
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+}
+.product-img img{
+    width: 100%;
+    border-radius:5px ;
+    text-align: center;
+}
+.product-img img:hover{
+   
+   transform:scale(1.3) rotate(10deg);
+   transition: 1.2s;
+   
+}
+.product-details{
+    margin: 15px;
+}
+.product-name{
+    font-size: 28px;
+    font-weight: 500;
+}
+.product-price{
+    font-size: 24px;
+    font-weight: 400;
+}
+.product-rating{
+    display: flex;
+
+}
+.product-rating-icon ul li{
+    list-style: none;
+    display: inline;
+}
+.product-rating-icon ul li i{
+    font-size: 14px;
+    color: #FB8200;
+}
+.product-rating-number{
+    margin-left: 10px;
+}
+.product-description{
+    margin-top: 10px;
+}
+.product-description p{
+    font-size: 14px;
+    font-weight: 500;
+    color: #787885;
+}
+.footer{
+    padding: 60px 0;
+    background-color: #0A0826;
+}
+.footer-detail h1{
+    color: #fff;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+}
+.footer-detail p{
+    color: #D9DBE1;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    text-align: center;
+    margin: 15px 0;
+}
+.social-icon ul{
+    display: flex;
+    justify-content: center;
+}
+.social-icon ul li{
+    list-style: none;
+    display: inline;
+}
+.social-icon ul li a{
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    margin: 10px;
+}
+.social-icon ul li a{
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+.social-icon ul li a i{
+    font-size: 24px;
+    color: #fff;
+}
+
+.footer-style{
+    background-color: #FB8200;
+    padding: 60px 0;
 }
