--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,31 +1,19 @@
-@media only screen and (max-width: 800px) {
-    .col-2{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        padding: 0 120px;
-        }
-    .header-nav{
-     display: none;
+@media only screen and (max-width: 992px) {
+    .container{
+        width: 80%;
     }
-    .responsive-menu-icon{
-        display: block;
+    .header-main {
+        display: none;
     }
-    .header_logo h2{
-        text-align: center;
-    }
-    .responsive-cart-icon{
-        display: block;
-        text-align: right;
+    .mobile-header{
+        display: flex;
+        justify-content: space-between;
     }
     .responsive-menu-icon,.responsive-cart-icon{
         font-size: 24px;
     }
-    .col-1{
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
-            grid-column-gap: 0px;
-            grid-row-gap: 0px;
+    .col-2{
+        grid-template-columns: repeat(1, 1fr);
     }
     .hero-info-details h1{
         text-align: center;
@@ -43,91 +31,67 @@
         display: flex;
         justify-content: center;
     }
-    .col-3{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 1fr;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-    }
-    .product-container {
-        width: 1180px;
-        margin: auto;
-    }
-  }
-  @media only screen and (max-width: 450px) {
-    .col-2{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        padding: 0 120px;
-        }
-    .header-nav{
-     display: none;
-    }
-    .responsive-menu-icon{
-        display: block;
-    }
-    .header_logo h2{
-        text-align: center;
-    }
-    .responsive-cart-icon{
-        display: block;
-        text-align: right;
-    }
-    .responsive-menu-icon,.responsive-cart-icon{
-        font-size: 24px;
-    }
-    .col-1{
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
-            grid-column-gap: 0px;
-            grid-row-gap: 0px;
-    }
-    .hero-info-details h1{
-        text-align: center;
-    }
-    .hero-info-details p{
-        font-size: 16px;
-        text-align: center;
-        margin: 0;
-    }
-    .hero-button{
-        display: flex;
-        justify-content: center;
-    }
-    .hero-image{
-        margin-top: 60px;
-        display: flex;
-        justify-content: center;
-    }
-    .col-3{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-    }
-    .product-container {
-        width: 1180px;
-        margin: auto;
-    }
-    .product{
-        margin: 15px 110px;
-        padding: 15px;
-        border-radius: 10px;
-    }
-    .product-img img{
+    .product-container{
         width: 100%;
     }
-    .product-name{
-        font-size: 20px;
+    .product{
+        margin: 15px;
     }
-    .product-price{
-        font-size: 18px;
+    .col-3{
+      grid-template-columns: repeat(2, 1fr);
     }
-    .product-description{
-        font-size: 16px;
-        line-height: 28px;
+    .col-7{
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .logo-image{
+        margin: 15px;
+    }
+    .see-button{
+        text-align: center;
+    }
+    .col-4{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .fourth-section-details{
+        margin: 0;
+    }
+    .fourth-section-description h1{
+        margin-top: 20px;
+        line-height: 46px;
+    }
+    .news-letter{
+        width: 90%;
+    }
+    .email{
+        width: 68%;
+    }
+    .submit-button{
+        font-size: 14px;
+        padding: 10px 28px;
+    }
+  }
+  @media only screen and (max-width: 662px) {
+      .container{
+        width: 90%;
+      }
+    .product-container{
+        width: 100%;
+    }
+    .col-3{
+        grid-template-columns: repeat(1, 1fr);
+      }
+    .hero-info-details h1{
+        font-size: 28px;
+    }
+    .hero-image img{
+        width: 90%;
+    }
+    .logo-image img{
+        width: 85%;
+    }
+    .fourth-section-description h1{
+        margin-top: 20px;
+        font-size: 24px;
+        line-height: 36px;
     }
   }
