--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,6 +262,9 @@
     box-shadow: 0px 0px 10px 1px rgba(224, 46, 111, 0.25);
     border-radius: 30px;
 }
+.shop-location{
+    overflow: hidden;
+}
 .shop-detail{
     display: flex;
     align-items: center;
